# Stylist

./: .env.example  .gitignore  profile.md  pyproject.toml
.claude/: launch.json
samples/: alexandre_vauthier_boots.json  example_item.json  marc_jacobs_jacket.json  stella_mccartney_boots.json
scripts/: score_cli.py  scrape_depop.py  scrape_one.py  seed_profile.py
supabase/: config.toml  seed.sql
supabase/migrations/: 0001_initial.sql
ui/: package-lock.json  package.json
ui/app/: actions.ts  page.tsx
ui/lib/: queries.ts  supabase.ts
